fixed missing background

--- a/web/styles.css
+++ b/web/styles.css
@@ -73,7 +73,7 @@ h4 {
    Generated by 'wal' 
    `clear; wal -nte --iterative -i Media/Wallpapers/; cat .cache/wal/colors.css` */
 :root {
-    --wallpaper: url("/home/nik/Media/Wallpapers/0058.jpg");
+    --wallpaper: url("bg.jpg");
 
     /* Special */
     --background: #021313;
